@@ -5,7 +5,7 @@ use Mojo::Asset::File;
 use Mojo::ByteStream 'b';
 use Mojo::DOM;
 use Mojo::URL;
-use Mojo::Util qw(slurp);
+use Mojo::Util 'slurp';
 use Pod::Simple::XHTML;
 use Pod::Simple::Search;
 
@@ -96,11 +96,7 @@ sub _pod_to_html {
   my $parser = Pod::Simple::XHTML->new;
   $parser->perldoc_url_prefix('https://metacpan.org/pod/');
   $parser->$_('') for qw(html_header html_footer);
-  $parser->strip_verbatim_indent(sub {
-    my $lines = shift;
-    my ($indent) = $lines->[0] =~ /^(\s+)/;
-    return $indent;
-  });
+  $parser->strip_verbatim_indent(sub { my ($i) = $_[0][0] =~ /^(\s+)/; $i });
   $parser->output_string(\(my $output));
   return $@ unless eval { $parser->parse_string_document("$pod"); 1 };
 
