@@ -39,7 +39,7 @@ $t->post_ok('/')->status_is(200)->content_like(qr!test123<h1 id="A">A</h1>!)
 # POD filter
 $t->post_ok('/block')->status_is(200)
   ->content_like(qr!test321<h2 id="lalala">lalala</h2>!)
-  ->content_like(qr!<pre><code>foo\(bar, bazz\)</code></pre>!)
+  ->content_like(qr!<pre><code>\{\n  foo\(\);\n\}</code></pre>!)
   ->content_like(qr!<p><code>test</code></p>!)->content_like(qr/Gray/);
 
 # Empty
@@ -101,6 +101,8 @@ test123<%= pod_to_html "=head1 A\n\n=head1 B\n\nC<test>"%>
 @@ block.html.ep
 test321<%= pod_to_html begin %>=head2 lalala
 
-  foo(bar, bazz)
+  {
+    foo();
+  }
 
 C<test><% end %>
