@@ -4,6 +4,8 @@
     Mojo::Transaction::WebSocket.
   - Improved finish and send methods in Mojolicious::Controller to
     automatically establish the WebSocket connection if necessary.
+  - Improved pod_to_html helper in Mojolicious::Plugin::PODRenderer to unindent
+    verbatim blocks. (OlegG)
 
 6.07  2015-04-07
   - Fixed Windows bug in "daemon.t".
